# CubeGame

./: .gitignore  CMakeLists.txt  vcpkg.json
.github/workflows/: linux.yml  macos.yml  windows.yml
src/: MyApplication.cpp
tests/: CMakeLists.txt
